macro-template/tests/ui/err/empty_template_variables.stderr
error: expected at least one template variable
 --> tests/ui/err/empty_template_variables.rs:5:13
  |
5 |         for () in [] {
  |             ^^
